force-app/main/default/objects/Lead/fields/Assigned_Delear__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Delear__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>