force-app/main/default/objects/Lead/fields/Zip_code__c.field-meta.xml
<CustomField>
    <fullName>Zip_code__c</fullName>
    <label>Zip_code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500034</fullName>
            </value>
            <value>
                <fullName>600017</fullName>
            </value>
            <value>
                <fullName>400053</fullName>
            </value>
            <value>
                <fullName>110001</fullName>
            </value>
            <value>
                <fullName>560034</fullName>
            </value>
            <value>
                <fullName>400092</fullName>
            </value>
            <value>
                <fullName>400093</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>