force-app/main/default/objects/Lead/listViews/Lead_Dealer_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Dealer_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Dealer Queue</label>
    <queue>Lead_Dealer_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>